# Taskmaster

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  conf.yaml
cmake/: FindReadline.cmake
confs/: conf.yaml  conf_err_incomplete_prog.yaml  conf_err_noperms.yaml  conf_err_same_prog.yaml  conf_minimal.yaml  conf_noprog.yaml
include/: pch.hpp
include/Client/: Client.hpp  ProcessInfo.hpp
include/Client/Console/: Console.hpp
include/Client/Epoll/: Epoll.hpp
include/Client/RequestClient/: RequestClient.hpp
include/common/: Commands.hpp  Utils.hpp
include/daemon/: daemon.hpp  log.hpp  process.hpp  program.hpp
include/daemon/parsing/: parsing.hpp  reloadParsing.hpp
infra-dev/: Dockerfile  docker-compose.yml
lib/nanomsg/: libnanomsg.so.6.0.1
source/: CMakeLists.txt
source/client/: main.cpp
source/client/Client/: Client.cpp
source/client/Client/Console/: Console.cpp
source/client/Client/Epoll/: Epoll.cpp
source/client/Client/RequestClient/: RequestClient.cpp
source/common/: Utils.cpp
source/daemon/: conf.yaml  daemon.cpp  daemon.hpp  log.cpp  log.hpp  main.cpp  parsing.cpp  parsing.hpp  process.cpp  process.hpp  program.cpp
source/daemon/parsing/: parsing.cpp  parsingProcess.cpp  parsingProgram.cpp  reloadParsing.cpp
source/taskmasterd/: .main.cpp.swp
test/: CMakeLists.txt
test/client/: client_setUpEpoll.cpp  processArgs_test.cpp
test/client/include/: testClient.hpp
test/common/: split_test.cpp  trim_test.cpp
test/daemon/: parsing_conf_test.cpp
